--- a/register_3.html
+++ b/register_3.html
@@ -11,7 +11,7 @@
    .container {
 	display:block!important;
 	max-width:980px!important;
-	margin:0 auto!important; /* makes it centered */
+	margin:0 auto!important; 
 	clear:both!important;
 }
 
