--- a/register_1.html
+++ b/register_1.html
@@ -99,17 +99,17 @@
 		<a href="http://marketfy.com" style="text-decoration: none;font-family: Arial, Calibri, Candara, Segoe, Optima, Arial, sans-serif;color: #404040;font-size: 17px;font-weight: bold;">
                 <img src="http://naderion.eu/clientimagehost/logomarketfy.png" style="max-width: 100%;"></a>
 	</div>
-	<div class="tophead" style="text-align: center; width: 100%; max-width: 300px; margin: 0px auto 40px auto; padding: 0 10px;">    
+	<div class="tophead" style="text-align: center; width: 100%; max-width: 365px; margin: 0px auto 40px auto; padding: 0 10px;">    
 		<a href="http://marketfy.com/page/about/" style="float: left;text-decoration: none;font-family: Arial, Calibri, Candara, Segoe, Optima, Arial, sans-serif;color: #404040;font-size: 17px;">About</a>
 		<a href="http://marketfy.com/product/webinars/" style="text-align: center;text-decoration: none;font-family: Arial, Calibri, Candara, Segoe, Optima, Arial, sans-serif;color: #404040;font-size: 17px;">Free Webinars</a>
 		<a href="http://blog.marketfy.com" style="float: right;text-decoration: none;font-family: Arial, Calibri, Candara, Segoe, Optima, Arial, sans-serif;color: #404040;font-size: 17px;">Blog</a>
 	</div>
 	<div class="bgwhite" style="background-color: #ffffff;width: 100%; margin-bottom: 70px;">
-            <div class="text1" id="headtext" style="font-family: Arial, Calibri, Candara, Segoe, Optima, Arial, sans-serif;color: #404040; font-size: 58px; font-weight: bold;padding-left: 15px;padding-top: 10px;border-top: solid #ffffff;">
+            <div class="text1" id="headtext" style="font-family: Arial, Calibri, Candara, Segoe, Optima, Arial, sans-serif;color: #404040; font-size: 42px; font-weight: bold;padding-left: 15px;padding-top: 10px;border-top: solid #ffffff;">
                 Welcome to Marketfy.
             </div>
-            <div class="text2" style="font-family: Arial, Calibri, Candara, Segoe, Optima, Arial, sans-serif;color: #1f4e79;font-size: 20px;padding-left: 15px;border-bottom: solid #dddddd;padding-bottom: 10px;">
-                We are here to help you trade & invest better. Here's how you can get started:
+            <div class="text2" style="font-family: Arial, Calibri, Candara, Segoe, Optima, Arial, sans-serif;color: #1f4e79;font-size: 20px;padding-left: 15px;">
+                <br> We are here to help you trade & invest better. Here's how you can get started:
             </div>
             <div class="column-wrap">
                 <div class="column">
@@ -175,8 +175,8 @@
             <div style="clear: both;"></div>
         </div>
     <div style="clear: both;"></div>
-    <div class="imagelogo" style="text-align: center; border-bottom: solid #ffffff; margin: 0 auto; width: 100%;">
-        <div class="text3" style="font-family: Arial, Calibri, Candara, Segoe, Optima, Arial, sans-serif;color: #44546a;font-size: 15px;font-weight: bold;text-align: center;border-top: solid #ffffff;padding-top: 10px;clear: both;">Marketfy & Benzinga Partners</div>
+    <div class="imagelogo" style="text-align: center; margin: 0 auto; width: 100%;">
+        <div class="text3" style="font-family: Arial, Calibri, Candara, Segoe, Optima, Arial, sans-serif;color: #44546a;font-size: 15px;font-weight: bold;text-align: center;padding-top: 10px;clear: both;">Marketfy & Benzinga Partners</div>
         <img src="http://d36io9znxl3bhq.cloudfront.net/static/images/email/v2/logo1.4080f71a951e.jpg" />
     </div>
     <div class="text4" style="text-align: center; width: 100%; margin: 25px auto; display: block; font-family: Arial, Calibri, Candara, Segoe, Optima, Arial, sans-serif; color: #404040; font-size: 10pt; font-weight: bold;padding-top: 10px;padding-bottom: 10px;">
